<resources>
    <string name="app_name">EpiAndroid</string>
    <string name="login">Ton login</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="prompt_password">Ton password</string>
    <string name="error_password">Invalid Password</string>
    <string name="error_login">Invalid Login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="notdefined">N/A</string>
    <string name="semester">Semestre :</string>
    <string name="location">Location :</string>
    <string name="credits">Crédits :</string>
    <string name="title">Titre :</string>
    <string name="code">Code :</string>
    <string name="status">Status :</string>
    <string name="end">Fin :</string>
    <string name="inscription">Inscription :</string>
    <string name="rights">Droits :</string>
    <string name="course">Cursus :</string>
    <string name="email">Email :</string>
    <string name="gpa">GPA :</string>
    <string name="promo">Promo :</string>
    <string name="phone">Phone :</string>
    <string name="searchlogin">Tapez un login à rechercher...</string>
    <string name="search">Chercher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string" />
    <string-array name="trombi_tek">
        <item>tek1</item>
        <item>tek2</item>
        <item>tek3</item>
        <item>tek4</item>
        <item>tek5</item>
    </string-array>
    <string-array name="trombi_location">
        <item>FR/BDX</item>
        <item>FR/PAR</item>
        <item>FR/TLS</item>
        <item>FR/LIL</item>
        <item>FR/LYN</item>
        <item>FR/MAR</item>
        <item>FR/MPL</item>
        <item>FR/NCY</item>
        <item>FR/NAN</item>
        <item>FR/NCE</item>
        <item>FR/REN</item>
        <item>FR/STG</item>
    </string-array>
    <string-array name="trombi_year">
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
    </string-array>
</resources>
