<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/module_status"
        android:src="@drawable/ic_action_hardware_keyboard_arrow_down" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:id="@+id/Status"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/Semester"
        android:layout_toRightOf="@+id/Semester"
        android:layout_toEndOf="@+id/Semester" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_txt_status"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignBottom="@+id/Status"
        android:layout_toRightOf="@+id/Status"
        android:layout_toEndOf="@+id/Status" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/semester"
        android:id="@+id/Semester"
        android:layout_below="@+id/module_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_semester"
        android:layout_alignBaseline="@+id/Semester"
        android:layout_alignBottom="@+id/Semester"
        android:layout_toRightOf="@+id/Semester"
        android:layout_toEndOf="@+id/Semester"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Semester"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_title"
        android:layout_alignBottom="@+id/title"
        android:layout_alignLeft="@+id/module_semester"
        android:layout_alignStart="@+id/module_semester" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/code"
        android:id="@+id/Code"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_code"
        android:layout_alignBottom="@+id/Code"
        android:layout_alignLeft="@+id/module_title"
        android:layout_alignStart="@+id/module_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end"
        android:id="@+id/end"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/Code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_end"
        android:layout_alignBottom="@+id/end"
        android:layout_alignLeft="@+id/module_code"
        android:layout_alignStart="@+id/module_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credits"
        android:id="@+id/credits"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/end"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_credits"
        android:layout_alignBottom="@+id/credits"
        android:layout_alignLeft="@+id/module_end"
        android:layout_alignStart="@+id/module_end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location"
        android:id="@+id/Location"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/credits"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_location"
        android:layout_alignBottom="@+id/Location"
        android:layout_alignLeft="@+id/module_credits"
        android:layout_alignStart="@+id/module_credits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inscription"
        android:id="@+id/registration"
        android:layout_below="@+id/Location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_registration"
        android:layout_alignBottom="@+id/registration"
        android:layout_alignLeft="@+id/module_location"
        android:layout_alignStart="@+id/module_location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rights"
        android:id="@+id/Droits"
        android:layout_below="@+id/registration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notdefined"
        android:id="@+id/module_rights"
        android:layout_alignBottom="@+id/Droits"
        android:layout_alignLeft="@+id/module_registration"
        android:layout_alignStart="@+id/module_registration" />
</RelativeLayout>
